// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Language Tour — Typeclasses > interfaces via records 1`] = `
[
  {
    "kind": "foreign",
    "name": "stringify",
  },
  {
    "codegenJS": "function main() {
  const env_cls2 = {
    v0: String
  };
  const fnref_cls2 = closure_20;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_20(env0, t1) {
  const cap_0 = env0.v0;
  const v0 = {};
  return v0;
}
return main();
",
    "elaborated": "λ(t: Type) ->
  Σ($sig: [ show: Π(t3: t) -> String ]) . Schema [ show: Π(t3: t) -> String ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Show"}
[3] lambda {"variable":"t","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [19]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] sigma {"variable":"$sig","level":2}
  :annotation -> [6]
  :body -> [12]
[6] row:ext {"label":"show"}
  :rest -> [11]
  :value -> [7]
[7] pi {"variable":"t3","icit":"Explicit","level":2}
  :annotation -> [8]
  :body -> [10]
[8] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[9] var:free {"name":"String"}
[10] var:ref {"name":"String"}
  :refers_to -> [9]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
[11] row:empty
[12] app {"icit":"Explicit"}
  :arg -> [14]
  :func -> [13]
[13] lit {"value":{"type":"Atom","value":"Schema"}}
[14] row:ext {"label":"show"}
  :rest -> [18]
  :value -> [15]
[15] pi {"variable":"t3","icit":"Explicit","level":3}
  :annotation -> [16]
  :body -> [17]
[16] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[17] var:ref {"name":"String"}
  :refers_to -> [9]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [15] {"level":3}
[18] row:empty
[19] env
  :capture -> [9] {"index":0}
[20] closure
  :body -> [3]
  :env -> [19]",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc { v0: String }
      let fnref_cls2 = &closure_20
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_20(env0, t1) entry=entry
    entry:
      let cap_0 = read env0.v0
      let v0 = alloc {  }  // {"erasure":{"tag":"sigma","source":"$sig"}}
      return v0",
    "name": "Show",
    "normalized": "λ(t: Type) ->
  (closure: Σ($sig: [ show: Π(t3: t) -> String ]) .
    Schema [ show: Π(t3: t) -> String ] -| Γ: t)",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Π(t2: Type) -> Type",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const env_cls2 = {
    v0: Bool
  };
  const fnref_cls2 = closure_24;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_24(env0, t1) {
  const cap_0 = env0.v0;
  const v0 = {};
  return v0;
}
return main();
",
    "elaborated": "λ(t: Type) ->
  Σ($sig: [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) .
    Schema [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Eq"}
[3] lambda {"variable":"t","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [23]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] sigma {"variable":"$sig","level":2}
  :annotation -> [6]
  :body -> [14]
[6] row:ext {"label":"eq"}
  :rest -> [13]
  :value -> [7]
[7] pi {"variable":"t5","icit":"Explicit","level":2}
  :annotation -> [8]
  :body -> [9]
[8] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[9] pi {"variable":"t6","icit":"Explicit","level":3}
  :annotation -> [10]
  :body -> [12]
[10] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
[11] var:free {"name":"Bool"}
[12] var:ref {"name":"Bool"}
  :refers_to -> [11]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [9] {"level":3}
[13] row:empty
[14] app {"icit":"Explicit"}
  :arg -> [16]
  :func -> [15]
[15] lit {"value":{"type":"Atom","value":"Schema"}}
[16] row:ext {"label":"eq"}
  :rest -> [22]
  :value -> [17]
[17] pi {"variable":"t5","icit":"Explicit","level":3}
  :annotation -> [18]
  :body -> [19]
[18] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[19] pi {"variable":"t6","icit":"Explicit","level":4}
  :annotation -> [20]
  :body -> [21]
[20] var:bound {"index":1}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [17] {"level":3}
[21] var:ref {"name":"Bool"}
  :refers_to -> [11]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [17] {"level":3}
  :scope -> [19] {"level":4}
[22] row:empty
[23] env
  :capture -> [11] {"index":0}
[24] closure
  :body -> [3]
  :env -> [23]",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc { v0: Bool }
      let fnref_cls2 = &closure_24
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_24(env0, t1) entry=entry
    entry:
      let cap_0 = read env0.v0
      let v0 = alloc {  }  // {"erasure":{"tag":"sigma","source":"$sig"}}
      return v0",
    "name": "Eq",
    "normalized": "λ(t: Type) ->
  (closure: Σ($sig: [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) .
    Schema [ eq: Π(t5: t) -> Π(t6: t) -> Bool ] -| Γ: t)",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Π(t4: Type) -> Type",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = "Num";
  const env_cls1 = {
    v0: v0
  };
  const fnref_cls1 = pap_fn1;
  const closure_cls1 = {
    __fn: fnref_cls1,
    __env: env_cls1
  };
  const v2 = {
    show: closure_cls1
  };
  return v2;
}

function pap_fn1(env2, arg3) {
  const cap_0 = env2.v0;
  const result_pap_fn1 = stringify(cap_0, arg3);
  return result_pap_fn1;
}
return main();
",
    "elaborated": "Struct [ show: λ(n: Num) -> FFI.stringify @Num n ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"ShowNum"}
[3] struct
  :field -> [12] {"label":"show"}
[5] lit {"value":{"type":"Atom","value":"Num"}}
[8] var:foreign {"name":"stringify","arity":2}
[10] lit {"value":{"type":"Atom","value":"Num"}}
[12] external {"name":"stringify","arity":2,"args":1,"saturated":false}
  :arg -> [10] {"index":0}
  :callee -> [8]
[13] pap {"remaining":1}
  :captured -> [10] {"index":0}
  :materializes -> [12]",
    "ivl": "(forall ((n Real)) (= n n))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = Num
      let env_cls1 = alloc { v0: v0 }
      let fnref_cls1 = &pap_fn1
      let closure_cls1 = alloc { __fn: fnref_cls1, __env: env_cls1 }
      let v2 = alloc { show: closure_cls1 }
      return v2
  fn pap_fn1(env2, arg3) entry=pap_fn1_entry
    pap_fn1_entry:
      let cap_0 = read env2.v0
      let result_pap_fn1 = call stringify(cap_0, arg3)
      return result_pap_fn1",
    "name": "ShowNum",
    "normalized": "Struct [ show: λ(n: Num) -> (closure: FFI.stringify @Num n -| Γ: n) ]",
    "solverTrace": "=== Formula ===
  (forall ((n Real)) (= n n))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  n=n -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Σ($sig: [ show: Π(t3: Num) -> String ]) . Schema [ show: Π(t3: Num) -> String ]",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const env_cls2 = {};
  const fnref_cls2 = closure_18;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  const v3 = {
    show: closure_cls2
  };
  return v3;
}

function closure_18(env0, b1) {
  let __block = "entry";
  let match0;
  while (true) {
    switch (__block) {
      case "entry": {
        (__block = "sw1");
        break;
      }
      case "sw1": {
        if ((String(b1) === "true")) {
          (__block = "case3");
          break;
        }
        if ((String(b1) === "false")) {
          (__block = "case4");
          break;
        }
      }
      case "case3": {
        const v4 = "true";
        const __t0 = v4;
        (match0 = __t0);
        (__block = "join2");
        break;
      }
      case "case4": {
        const v5 = "false";
        const __t0 = v5;
        (match0 = __t0);
        (__block = "join2");
        break;
      }
      case "join2": {
        return match0;
      }
    }
  }
}
return main();
",
    "elaborated": "Struct [ show: λ(b: Bool) -> match b | true -> "true" | false -> "false" ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"ShowBool"}
[3] struct
  :field -> [4] {"label":"show"}
[4] lambda {"variable":"b","icit":"Explicit","level":1}
  :annotation -> [5]
  :body -> [6]
  :env -> [17]
[5] lit {"value":{"type":"Atom","value":"Bool"}}
[6] match
  :alt -> [8] {"index":0}
  :alt -> [11] {"index":1}
  :decision_tree -> [14]
  :scrutinee -> [7]
[7] var:bound {"index":0}
  :refers_to -> [4]
  :scope -> [2] {"level":0}
  :scope -> [4] {"level":1}
[8] case
  :body -> [10]
  :next -> [11]
  :pattern -> [9]
[9] pat:lit {"value":{"type":"Bool","value":true}}
[10] lit {"value":{"type":"String","value":"true"}}
[11] case
  :body -> [13]
  :pattern -> [12]
[12] pat:lit {"value":{"type":"Bool","value":false}}
[13] lit {"value":{"type":"String","value":"false"}}
[14] switch {"kind":"lit"}
  :branch -> [15] {"value":{"type":"Bool","value":true}}
  :branch -> [16] {"value":{"type":"Bool","value":false}}
  :inspect -> [7]
[15] leaf
  :body -> [10]
[16] leaf
  :body -> [13]
[17] env
[18] closure
  :body -> [4]
  :env -> [17]",
    "ivl": "(forall ((b Bool)) (and (= b b) (= b b)))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_18
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      let v3 = alloc { show: closure_cls2 }
      return v3
  fn closure_18(env0, b1) entry=entry
    entry:
      jump sw1
    sw1:
      branch b1 { true -> case3 | false -> case4 }
    case3:
      let v4 = "true"
      jump join2(v4)
    case4:
      let v5 = "false"
      jump join2(v5)
    join2(match0):
      return match0",
    "name": "ShowBool",
    "normalized": "Struct
  [ show: λ(b: Bool) ->
      (closure: match b | true -> "true" | false -> "false" -| Γ: b) ]",
    "solverTrace": "=== Formula ===
  (forall ((b Bool)) (and (= b b) (= b b)))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  b=b -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Σ($sig: [ show: Π(t3: Bool) -> String ]) .
  Schema [ show: Π(t3: Bool) -> String ]",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = unknown;
  const v1 = {
    eq: v0
  };
  return v1;
}
return main();
",
    "elaborated": "Struct [ eq: λ(x: Num) -> λ(y: Num) -> FFI.$eq x y ]",
    "error": "emit_erl: unknown function arity for "unknown"",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"EqNum"}
[3] struct
  :field -> [11] {"label":"eq"}
[5] lit {"value":{"type":"Atom","value":"Num"}}
[7] lit {"value":{"type":"Atom","value":"Num"}}
[10] var:foreign {"name":"$eq","arity":2}
[11] var:ref {"name":"$eq"}
  :refers_to -> [10]
  :scope -> [2] {"level":0}
  :scope -> [11] {"level":1}",
    "ivl": "(forall ((x Real)) (forall ((y Real)) (and (= x x) (= y y))))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &unknown
      let v1 = alloc { eq: v0 }
      return v1",
    "name": "EqNum",
    "normalized": "Struct [ eq: λ(x: Num) -> (closure: λ(y: Num) -> FFI.$eq x y -| Γ: x) ]",
    "solverTrace": "=== Formula ===
  (forall ((x Real)) (forall ((y Real)) (and (= x x) (= y y))))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  x=x -> residual
  x=y -> residual
  y=x -> residual
  y=y -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Σ($sig: [ eq: Π(t5: Num) -> Π(t6: Num) -> Bool ]) .
  Schema [ eq: Π(t5: Num) -> Π(t6: Num) -> Bool ]",
    "validity": "valid",
  },
]
`;

exports[`Language Tour — Typeclasses > multiple constraints 1`] = `
[
  {
    "kind": "foreign",
    "name": "stringify",
  },
  {
    "codegenJS": "function main() {
  const env_cls2 = {
    v0: String
  };
  const fnref_cls2 = closure_20;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_20(env0, t1) {
  const cap_0 = env0.v0;
  const v0 = {};
  return v0;
}
return main();
",
    "elaborated": "λ(t: Type) ->
  Σ($sig: [ show: Π(t3: t) -> String ]) . Schema [ show: Π(t3: t) -> String ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Show"}
[3] lambda {"variable":"t","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [19]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] sigma {"variable":"$sig","level":2}
  :annotation -> [6]
  :body -> [12]
[6] row:ext {"label":"show"}
  :rest -> [11]
  :value -> [7]
[7] pi {"variable":"t3","icit":"Explicit","level":2}
  :annotation -> [8]
  :body -> [10]
[8] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[9] var:free {"name":"String"}
[10] var:ref {"name":"String"}
  :refers_to -> [9]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
[11] row:empty
[12] app {"icit":"Explicit"}
  :arg -> [14]
  :func -> [13]
[13] lit {"value":{"type":"Atom","value":"Schema"}}
[14] row:ext {"label":"show"}
  :rest -> [18]
  :value -> [15]
[15] pi {"variable":"t3","icit":"Explicit","level":3}
  :annotation -> [16]
  :body -> [17]
[16] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[17] var:ref {"name":"String"}
  :refers_to -> [9]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [15] {"level":3}
[18] row:empty
[19] env
  :capture -> [9] {"index":0}
[20] closure
  :body -> [3]
  :env -> [19]",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc { v0: String }
      let fnref_cls2 = &closure_20
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_20(env0, t1) entry=entry
    entry:
      let cap_0 = read env0.v0
      let v0 = alloc {  }  // {"erasure":{"tag":"sigma","source":"$sig"}}
      return v0",
    "name": "Show",
    "normalized": "λ(t: Type) ->
  (closure: Σ($sig: [ show: Π(t3: t) -> String ]) .
    Schema [ show: Π(t3: t) -> String ] -| Γ: t)",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Π(t2: Type) -> Type",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const env_cls2 = {
    v0: Bool
  };
  const fnref_cls2 = closure_24;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_24(env0, t1) {
  const cap_0 = env0.v0;
  const v0 = {};
  return v0;
}
return main();
",
    "elaborated": "λ(t: Type) ->
  Σ($sig: [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) .
    Schema [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Eq"}
[3] lambda {"variable":"t","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [23]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] sigma {"variable":"$sig","level":2}
  :annotation -> [6]
  :body -> [14]
[6] row:ext {"label":"eq"}
  :rest -> [13]
  :value -> [7]
[7] pi {"variable":"t5","icit":"Explicit","level":2}
  :annotation -> [8]
  :body -> [9]
[8] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[9] pi {"variable":"t6","icit":"Explicit","level":3}
  :annotation -> [10]
  :body -> [12]
[10] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
[11] var:free {"name":"Bool"}
[12] var:ref {"name":"Bool"}
  :refers_to -> [11]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [9] {"level":3}
[13] row:empty
[14] app {"icit":"Explicit"}
  :arg -> [16]
  :func -> [15]
[15] lit {"value":{"type":"Atom","value":"Schema"}}
[16] row:ext {"label":"eq"}
  :rest -> [22]
  :value -> [17]
[17] pi {"variable":"t5","icit":"Explicit","level":3}
  :annotation -> [18]
  :body -> [19]
[18] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[19] pi {"variable":"t6","icit":"Explicit","level":4}
  :annotation -> [20]
  :body -> [21]
[20] var:bound {"index":1}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [17] {"level":3}
[21] var:ref {"name":"Bool"}
  :refers_to -> [11]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [17] {"level":3}
  :scope -> [19] {"level":4}
[22] row:empty
[23] env
  :capture -> [11] {"index":0}
[24] closure
  :body -> [3]
  :env -> [23]",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc { v0: Bool }
      let fnref_cls2 = &closure_24
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_24(env0, t1) entry=entry
    entry:
      let cap_0 = read env0.v0
      let v0 = alloc {  }  // {"erasure":{"tag":"sigma","source":"$sig"}}
      return v0",
    "name": "Eq",
    "normalized": "λ(t: Type) ->
  (closure: Σ($sig: [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) .
    Schema [ eq: Π(t5: t) -> Π(t6: t) -> Bool ] -| Γ: t)",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Π(t4: Type) -> Type",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = "Num";
  const env_cls1 = {
    v0: v0
  };
  const fnref_cls1 = pap_fn1;
  const closure_cls1 = {
    __fn: fnref_cls1,
    __env: env_cls1
  };
  const v2 = {
    show: closure_cls1
  };
  return v2;
}

function pap_fn1(env2, arg3) {
  const cap_0 = env2.v0;
  const result_pap_fn1 = stringify(cap_0, arg3);
  return result_pap_fn1;
}
return main();
",
    "elaborated": "Struct [ show: λ(n: Num) -> FFI.stringify @Num n ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"ShowNum"}
[3] struct
  :field -> [12] {"label":"show"}
[5] lit {"value":{"type":"Atom","value":"Num"}}
[8] var:foreign {"name":"stringify","arity":2}
[10] lit {"value":{"type":"Atom","value":"Num"}}
[12] external {"name":"stringify","arity":2,"args":1,"saturated":false}
  :arg -> [10] {"index":0}
  :callee -> [8]
[13] pap {"remaining":1}
  :captured -> [10] {"index":0}
  :materializes -> [12]",
    "ivl": "(forall ((n Real)) (= n n))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = Num
      let env_cls1 = alloc { v0: v0 }
      let fnref_cls1 = &pap_fn1
      let closure_cls1 = alloc { __fn: fnref_cls1, __env: env_cls1 }
      let v2 = alloc { show: closure_cls1 }
      return v2
  fn pap_fn1(env2, arg3) entry=pap_fn1_entry
    pap_fn1_entry:
      let cap_0 = read env2.v0
      let result_pap_fn1 = call stringify(cap_0, arg3)
      return result_pap_fn1",
    "name": "ShowNum",
    "normalized": "Struct [ show: λ(n: Num) -> (closure: FFI.stringify @Num n -| Γ: n) ]",
    "solverTrace": "=== Formula ===
  (forall ((n Real)) (= n n))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  n=n -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Σ($sig: [ show: Π(t3: Num) -> String ]) . Schema [ show: Π(t3: Num) -> String ]",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = unknown;
  const v1 = {
    eq: v0
  };
  return v1;
}
return main();
",
    "elaborated": "Struct [ eq: λ(x: Num) -> λ(y: Num) -> FFI.$eq x y ]",
    "error": "emit_erl: unknown function arity for "unknown"",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"EqNum"}
[3] struct
  :field -> [11] {"label":"eq"}
[5] lit {"value":{"type":"Atom","value":"Num"}}
[7] lit {"value":{"type":"Atom","value":"Num"}}
[10] var:foreign {"name":"$eq","arity":2}
[11] var:ref {"name":"$eq"}
  :refers_to -> [10]
  :scope -> [2] {"level":0}
  :scope -> [11] {"level":1}",
    "ivl": "(forall ((x Real)) (forall ((y Real)) (and (= x x) (= y y))))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &unknown
      let v1 = alloc { eq: v0 }
      return v1",
    "name": "EqNum",
    "normalized": "Struct [ eq: λ(x: Num) -> (closure: λ(y: Num) -> FFI.$eq x y -| Γ: x) ]",
    "solverTrace": "=== Formula ===
  (forall ((x Real)) (forall ((y Real)) (and (= x x) (= y y))))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  x=x -> residual
  x=y -> residual
  y=x -> residual
  y=y -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Σ($sig: [ eq: Π(t5: Num) -> Π(t6: Num) -> Bool ]) .
  Schema [ eq: Π(t5: Num) -> Π(t6: Num) -> Bool ]",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const env_cls2 = {};
  const fnref_cls2 = closure_71;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_75(env0, y1) {
  let __block = "entry";
  let match7;
  while (true) {
    switch (__block) {
      case "entry": {
        const cap_0 = env0.v0;
        const cap_1 = env0.v1;
        const cap_2 = env0.v2;
        (__block = "sw8");
        break;
      }
      case "sw8": {
        const v0 = cap_0.eq;
        const fnref1 = v0.__fn;
        const env2 = v0.__env;
        const v3 = fnref1(env2, cap_1);
        const fnref4 = v3.__fn;
        const env5 = v3.__env;
        const v6 = fnref4(env5, y1);
        if ((String(v6) === "true")) {
          (__block = "case10");
          break;
        }
        if ((String(v6) === "false")) {
          (__block = "case11");
          break;
        }
      }
      case "case10": {
        const v11 = "Equal: ";
        const v12 = cap_2.show;
        const fnref13 = v12.__fn;
        const env14 = v12.__env;
        const v15 = fnref13(env14, cap_1);
        const v16 = (v11 + v15);
        const __t0 = v16;
        (match7 = __t0);
        (__block = "join9");
        break;
      }
      case "case11": {
        const v12 = "Not equal";
        const __t0 = v12;
        (match7 = __t0);
        (__block = "join9");
        break;
      }
      case "join9": {
        return match7;
      }
    }
  }
}

function closure_74(env0, x1) {
  const cap_0 = env0.v0;
  const cap_1 = env0.v1;
  const cap_2 = env0.v2;
  const env_cls2 = {
    v0: cap_1,
    v1: x1,
    v2: cap_2
  };
  const fnref_cls2 = closure_75;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_73(env0, eq1) {
  const cap_0 = env0.v0;
  const cap_1 = env0.v1;
  const env_cls2 = {
    v0: cap_0,
    v1: eq1,
    v2: cap_1
  };
  const fnref_cls2 = closure_74;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_72(env0, show1) {
  const cap_0 = env0.v0;
  const env_cls2 = {
    v0: cap_0,
    v1: show1
  };
  const fnref_cls2 = closure_73;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_71(env0, t1) {
  const env_cls2 = {
    v0: t1
  };
  const fnref_cls2 = closure_72;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}
return main();
",
    "elaborated": "λ(t: Type) =>
  λ(show: Σ($sig: [ show: Π(t3: t) -> String ]) .
    Schema [ show: Π(t3: t) -> String ]) =>
    λ(eq: Σ($sig: [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) .
      Schema [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) =>
      λ(x: t) ->
        λ(y: t) ->
          match ((eq).eq) x y
            | true -> FFI.$concat "Equal: " (((show).show) x)
            | false -> "Not equal"",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"displayIfEqual"}
[3] lambda {"variable":"t","icit":"Implicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [66]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] lambda {"variable":"show","icit":"Implicit","level":2}
  :annotation -> [6]
  :body -> [19]
  :env -> [67]
[6] sigma {"variable":"$sig","level":2}
  :annotation -> [7]
  :body -> [12]
[7] row:ext {"label":"show"}
  :rest -> [11]
  :value -> [8]
[8] pi {"variable":"t3","icit":"Explicit","level":2}
  :annotation -> [9]
  :body -> [10]
[9] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[10] lit {"value":{"type":"Atom","value":"String"}}
[11] row:empty
[12] app {"icit":"Explicit"}
  :arg -> [14]
  :func -> [13]
[13] lit {"value":{"type":"Atom","value":"Schema"}}
[14] row:ext {"label":"show"}
  :rest -> [18]
  :value -> [15]
[15] pi {"variable":"t3","icit":"Explicit","level":3}
  :annotation -> [16]
  :body -> [17]
[16] var:bound {"index":0}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [6] {"level":2}
[17] lit {"value":{"type":"Atom","value":"String"}}
[18] row:empty
[19] lambda {"variable":"eq","icit":"Implicit","level":3}
  :annotation -> [20]
  :body -> [37]
  :env -> [68]
[20] sigma {"variable":"$sig","level":3}
  :annotation -> [21]
  :body -> [28]
[21] row:ext {"label":"eq"}
  :rest -> [27]
  :value -> [22]
[22] pi {"variable":"t5","icit":"Explicit","level":3}
  :annotation -> [23]
  :body -> [24]
[23] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[24] pi {"variable":"t6","icit":"Explicit","level":4}
  :annotation -> [25]
  :body -> [26]
[25] var:bound {"index":2}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [22] {"level":3}
[26] lit {"value":{"type":"Atom","value":"Bool"}}
[27] row:empty
[28] app {"icit":"Explicit"}
  :arg -> [30]
  :func -> [29]
[29] lit {"value":{"type":"Atom","value":"Schema"}}
[30] row:ext {"label":"eq"}
  :rest -> [36]
  :value -> [31]
[31] pi {"variable":"t5","icit":"Explicit","level":4}
  :annotation -> [32]
  :body -> [33]
[32] var:bound {"index":1}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [20] {"level":3}
[33] pi {"variable":"t6","icit":"Explicit","level":5}
  :annotation -> [34]
  :body -> [35]
[34] var:bound {"index":2}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [20] {"level":3}
  :scope -> [31] {"level":4}
[35] lit {"value":{"type":"Atom","value":"Bool"}}
[36] row:empty
[37] lambda {"variable":"x","icit":"Explicit","level":4}
  :annotation -> [38]
  :body -> [39]
  :env -> [69]
[38] var:bound {"index":2}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [19] {"level":3}
[39] lambda {"variable":"y","icit":"Explicit","level":5}
  :annotation -> [40]
  :body -> [41]
  :env -> [70]
[40] var:bound {"index":3}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [19] {"level":3}
  :scope -> [37] {"level":4}
[41] match
  :alt -> [48] {"index":0}
  :alt -> [59] {"index":1}
  :decision_tree -> [63]
  :scrutinee -> [42]
[42] app {"icit":"Explicit"}
  :arg -> [47]
  :func -> [43]
[43] app {"icit":"Explicit"}
  :arg -> [46]
  :func -> [44]
[44] proj {"label":"eq"}
  :target -> [45]
[45] var:bound {"index":2}
  :refers_to -> [19]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [19] {"level":3}
  :scope -> [37] {"level":4}
  :scope -> [39] {"level":5}
[46] var:bound {"index":1}
  :refers_to -> [37]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [19] {"level":3}
  :scope -> [37] {"level":4}
  :scope -> [39] {"level":5}
[47] var:bound {"index":0}
  :refers_to -> [39]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [19] {"level":3}
  :scope -> [37] {"level":4}
  :scope -> [39] {"level":5}
[48] case
  :body -> [62]
  :next -> [59]
  :pattern -> [49]
[49] pat:lit {"value":{"type":"Bool","value":true}}
[52] var:foreign {"name":"$concat","arity":2}
[54] lit {"value":{"type":"String","value":"Equal: "}}
  :next -> [55]
[55] app {"icit":"Explicit"}
  :arg -> [58]
  :func -> [56]
[56] proj {"label":"show"}
  :target -> [57]
[57] var:bound {"index":3}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [19] {"level":3}
  :scope -> [37] {"level":4}
  :scope -> [39] {"level":5}
[58] var:bound {"index":1}
  :refers_to -> [37]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [19] {"level":3}
  :scope -> [37] {"level":4}
  :scope -> [39] {"level":5}
[59] case
  :body -> [61]
  :pattern -> [60]
[60] pat:lit {"value":{"type":"Bool","value":false}}
[61] lit {"value":{"type":"String","value":"Not equal"}}
[62] primop {"op":"$concat"}
  :arg -> [54] {"index":0}
  :arg -> [55] {"index":1}
  :callee -> [52]
[63] switch {"kind":"lit"}
  :branch -> [64] {"value":{"type":"Bool","value":true}}
  :branch -> [65] {"value":{"type":"Bool","value":false}}
  :inspect -> [42]
[64] leaf
  :body -> [62]
[65] leaf
  :body -> [61]
[66] env
[67] env
  :capture -> [3] {"index":0}
[68] env
  :capture -> [3] {"index":0}
  :capture -> [5] {"index":1}
[69] env
  :capture -> [3] {"index":0}
  :capture -> [19] {"index":1}
  :capture -> [5] {"index":2}
[70] env
  :capture -> [19] {"index":0}
  :capture -> [37] {"index":1}
  :capture -> [5] {"index":2}
[71] closure
  :body -> [3]
  :env -> [66]
[72] closure
  :body -> [5]
  :env -> [67]
[73] closure
  :body -> [19]
  :env -> [68]
[74] closure
  :body -> [37]
  :env -> [69]
[75] closure
  :body -> [39]
  :env -> [70]",
    "ivl": "(forall ((t Type))
  (forall ((x Type))
    (forall ((y Type))
      (and
        (= x x)
        (= y y)
        (forall ((t5 Type))
          (=>
            (= t5 x)
            (forall ((t6 Type))
              (=>
                (= t6 y)
                (forall (($fresh7 Bool)) (=> (= $fresh7 true) (= x x)))))))
        (= x x)
        (= y y)))))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_71
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_75(env0, y1) entry=entry
    entry:
      let cap_0 = read env0.v0
      let cap_1 = read env0.v1
      let cap_2 = read env0.v2
      jump sw8
    sw8:
      let v0 = read cap_0.eq
      let fnref1 = read v0.__fn
      let env2 = read v0.__env
      let v3 = call *fnref1(env2, cap_1)
      let fnref4 = read v3.__fn
      let env5 = read v3.__env
      let v6 = call *fnref4(env5, y1)
      branch v6 { true -> case10 | false -> case11 }
    case10:
      let v11 = "Equal: "
      let v12 = read cap_2.show
      let fnref13 = read v12.__fn
      let env14 = read v12.__env
      let v15 = call *fnref13(env14, cap_1)
      let v16 = ++(v11, v15)
      jump join9(v16)
    case11:
      let v12 = "Not equal"
      jump join9(v12)
    join9(match7):
      return match7
  fn closure_74(env0, x1) entry=entry
    entry:
      let cap_0 = read env0.v0
      let cap_1 = read env0.v1
      let cap_2 = read env0.v2
      let env_cls2 = alloc { v0: cap_1, v1: x1, v2: cap_2 }
      let fnref_cls2 = &closure_75
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_73(env0, eq1) entry=entry
    entry:
      let cap_0 = read env0.v0
      let cap_1 = read env0.v1
      let env_cls2 = alloc { v0: cap_0, v1: eq1, v2: cap_1 }
      let fnref_cls2 = &closure_74
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_72(env0, show1) entry=entry
    entry:
      let cap_0 = read env0.v0
      let env_cls2 = alloc { v0: cap_0, v1: show1 }
      let fnref_cls2 = &closure_73
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_71(env0, t1) entry=entry
    entry:
      let env_cls2 = alloc { v0: t1 }
      let fnref_cls2 = &closure_72
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2",
    "name": "displayIfEqual",
    "normalized": "λ(t: Type) =>
  (closure: λ(show: Σ($sig: [ show: Π(t3: t) -> String ]) .
    Schema [ show: Π(t3: t) -> String ]) =>
    λ(eq: Σ($sig: [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) .
      Schema [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) =>
      λ(x: t) ->
        λ(y: t) ->
          match ((eq).eq) x y
            | true -> FFI.$concat "Equal: " (((show).show) x)
            | false -> "Not equal" -| Γ: t)",
    "solverTrace": "=== Formula ===
  (forall ((t Type))
    (forall ((x Type))
      (forall ((y Type))
        (and
          (= x x)
          (= y y)
          (forall ((t5 Type))
            (=>
              (= t5 x)
              (forall ((t6 Type))
                (=>
                  (= t6 y)
                  (forall (($fresh7 Bool)) (=> (= $fresh7 true) (= x x)))))))
          (= x x)
          (= y y)))))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  t=x -> residual
  t=y -> residual
  x=x -> residual
  x=y -> residual
  y=x -> residual
  y=y -> residual
  t5=x -> residual
  t5=y -> residual
  t6=x -> residual
  t6=y -> residual
  $fresh7=true -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(t: Type) =>
  Π(show: Σ($sig: [ show: Π(t3: t) -> String ]) .
    Schema [ show: Π(t3: t) -> String ]) =>
    Π(eq: Σ($sig: [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) .
      Schema [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) =>
      Π(x: t) -> Π(y: t) -> String",
    "validity": "valid",
  },
  {
    "kind": "using",
    "name": "(using)",
  },
  {
    "kind": "using",
    "name": "(using)",
  },
  {
    "codegenJS": "function main() {
  const v0 = displayIfEqual;
  const v1 = "Num";
  const fnref2 = v0.__fn;
  const env3 = v0.__env;
  const v4 = fnref2(env3, v1);
  const v5 = ShowNum;
  const fnref6 = v4.__fn;
  const env7 = v4.__env;
  const v8 = fnref6(env7, v5);
  const v9 = EqNum;
  const fnref10 = v8.__fn;
  const env11 = v8.__env;
  const v12 = fnref10(env11, v9);
  const v13 = 5;
  const fnref14 = v12.__fn;
  const env15 = v12.__env;
  const v16 = fnref14(env15, v13);
  const v17 = 5;
  const fnref18 = v16.__fn;
  const env19 = v16.__env;
  const v20 = fnref18(env19, v17);
  return v20;
}
return main();
",
    "elaborated": "displayIfEqual @Num @ShowNum @EqNum 5 5",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"msg"}
[3] app {"icit":"Explicit"}
  :arg -> [16]
  :func -> [4]
[4] app {"icit":"Explicit"}
  :arg -> [15]
  :func -> [5]
[5] app {"icit":"Implicit"}
  :arg -> [14]
  :func -> [6]
[6] app {"icit":"Implicit"}
  :arg -> [12]
  :func -> [7]
[7] app {"icit":"Implicit"}
  :arg -> [10]
  :func -> [9]
[8] var:free {"name":"displayIfEqual"}
[9] var:ref {"name":"displayIfEqual"}
  :refers_to -> [8]
  :scope -> [2] {"level":0}
[10] lit {"value":{"type":"Atom","value":"Num"}}
[11] var:free {"name":"ShowNum"}
[12] var:ref {"name":"ShowNum"}
  :refers_to -> [11]
  :scope -> [2] {"level":0}
[13] var:free {"name":"EqNum"}
[14] var:ref {"name":"EqNum"}
  :refers_to -> [13]
  :scope -> [2] {"level":0}
[15] lit {"value":{"type":"Num","value":5}}
[16] lit {"value":{"type":"Num","value":5}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = displayIfEqual
      let v1 = Num
      let fnref2 = read v0.__fn
      let env3 = read v0.__env
      let v4 = call *fnref2(env3, v1)
      let v5 = ShowNum
      let fnref6 = read v4.__fn
      let env7 = read v4.__env
      let v8 = call *fnref6(env7, v5)
      let v9 = EqNum
      let fnref10 = read v8.__fn
      let env11 = read v8.__env
      let v12 = call *fnref10(env11, v9)
      let v13 = 5
      let fnref14 = read v12.__fn
      let env15 = read v12.__env
      let v16 = call *fnref14(env15, v13)
      let v17 = 5
      let fnref18 = read v16.__fn
      let env19 = read v16.__env
      let v20 = call *fnref18(env19, v17)
      return v20",
    "name": "msg",
    "normalized": "($concat: ("Equal: ") ((stringify: (Num) (5))))",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "String",
    "validity": "valid",
  },
]
`;

exports[`Language Tour — Typeclasses > traits with implicits 1`] = `
[
  {
    "kind": "foreign",
    "name": "stringify",
  },
  {
    "codegenJS": "function main() {
  const env_cls2 = {
    v0: String
  };
  const fnref_cls2 = closure_20;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_20(env0, t1) {
  const cap_0 = env0.v0;
  const v0 = {};
  return v0;
}
return main();
",
    "elaborated": "λ(t: Type) ->
  Σ($sig: [ show: Π(t3: t) -> String ]) . Schema [ show: Π(t3: t) -> String ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Show"}
[3] lambda {"variable":"t","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [19]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] sigma {"variable":"$sig","level":2}
  :annotation -> [6]
  :body -> [12]
[6] row:ext {"label":"show"}
  :rest -> [11]
  :value -> [7]
[7] pi {"variable":"t3","icit":"Explicit","level":2}
  :annotation -> [8]
  :body -> [10]
[8] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[9] var:free {"name":"String"}
[10] var:ref {"name":"String"}
  :refers_to -> [9]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
[11] row:empty
[12] app {"icit":"Explicit"}
  :arg -> [14]
  :func -> [13]
[13] lit {"value":{"type":"Atom","value":"Schema"}}
[14] row:ext {"label":"show"}
  :rest -> [18]
  :value -> [15]
[15] pi {"variable":"t3","icit":"Explicit","level":3}
  :annotation -> [16]
  :body -> [17]
[16] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[17] var:ref {"name":"String"}
  :refers_to -> [9]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [15] {"level":3}
[18] row:empty
[19] env
  :capture -> [9] {"index":0}
[20] closure
  :body -> [3]
  :env -> [19]",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc { v0: String }
      let fnref_cls2 = &closure_20
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_20(env0, t1) entry=entry
    entry:
      let cap_0 = read env0.v0
      let v0 = alloc {  }  // {"erasure":{"tag":"sigma","source":"$sig"}}
      return v0",
    "name": "Show",
    "normalized": "λ(t: Type) ->
  (closure: Σ($sig: [ show: Π(t3: t) -> String ]) .
    Schema [ show: Π(t3: t) -> String ] -| Γ: t)",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Π(t2: Type) -> Type",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const env_cls2 = {
    v0: Bool
  };
  const fnref_cls2 = closure_24;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_24(env0, t1) {
  const cap_0 = env0.v0;
  const v0 = {};
  return v0;
}
return main();
",
    "elaborated": "λ(t: Type) ->
  Σ($sig: [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) .
    Schema [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Eq"}
[3] lambda {"variable":"t","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [23]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] sigma {"variable":"$sig","level":2}
  :annotation -> [6]
  :body -> [14]
[6] row:ext {"label":"eq"}
  :rest -> [13]
  :value -> [7]
[7] pi {"variable":"t5","icit":"Explicit","level":2}
  :annotation -> [8]
  :body -> [9]
[8] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[9] pi {"variable":"t6","icit":"Explicit","level":3}
  :annotation -> [10]
  :body -> [12]
[10] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
[11] var:free {"name":"Bool"}
[12] var:ref {"name":"Bool"}
  :refers_to -> [11]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [9] {"level":3}
[13] row:empty
[14] app {"icit":"Explicit"}
  :arg -> [16]
  :func -> [15]
[15] lit {"value":{"type":"Atom","value":"Schema"}}
[16] row:ext {"label":"eq"}
  :rest -> [22]
  :value -> [17]
[17] pi {"variable":"t5","icit":"Explicit","level":3}
  :annotation -> [18]
  :body -> [19]
[18] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[19] pi {"variable":"t6","icit":"Explicit","level":4}
  :annotation -> [20]
  :body -> [21]
[20] var:bound {"index":1}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [17] {"level":3}
[21] var:ref {"name":"Bool"}
  :refers_to -> [11]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [17] {"level":3}
  :scope -> [19] {"level":4}
[22] row:empty
[23] env
  :capture -> [11] {"index":0}
[24] closure
  :body -> [3]
  :env -> [23]",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc { v0: Bool }
      let fnref_cls2 = &closure_24
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_24(env0, t1) entry=entry
    entry:
      let cap_0 = read env0.v0
      let v0 = alloc {  }  // {"erasure":{"tag":"sigma","source":"$sig"}}
      return v0",
    "name": "Eq",
    "normalized": "λ(t: Type) ->
  (closure: Σ($sig: [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) .
    Schema [ eq: Π(t5: t) -> Π(t6: t) -> Bool ] -| Γ: t)",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Π(t4: Type) -> Type",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = "Num";
  const env_cls1 = {
    v0: v0
  };
  const fnref_cls1 = pap_fn1;
  const closure_cls1 = {
    __fn: fnref_cls1,
    __env: env_cls1
  };
  const v2 = {
    show: closure_cls1
  };
  return v2;
}

function pap_fn1(env2, arg3) {
  const cap_0 = env2.v0;
  const result_pap_fn1 = stringify(cap_0, arg3);
  return result_pap_fn1;
}
return main();
",
    "elaborated": "Struct [ show: λ(n: Num) -> FFI.stringify @Num n ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"ShowNum"}
[3] struct
  :field -> [12] {"label":"show"}
[5] lit {"value":{"type":"Atom","value":"Num"}}
[8] var:foreign {"name":"stringify","arity":2}
[10] lit {"value":{"type":"Atom","value":"Num"}}
[12] external {"name":"stringify","arity":2,"args":1,"saturated":false}
  :arg -> [10] {"index":0}
  :callee -> [8]
[13] pap {"remaining":1}
  :captured -> [10] {"index":0}
  :materializes -> [12]",
    "ivl": "(forall ((n Real)) (= n n))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = Num
      let env_cls1 = alloc { v0: v0 }
      let fnref_cls1 = &pap_fn1
      let closure_cls1 = alloc { __fn: fnref_cls1, __env: env_cls1 }
      let v2 = alloc { show: closure_cls1 }
      return v2
  fn pap_fn1(env2, arg3) entry=pap_fn1_entry
    pap_fn1_entry:
      let cap_0 = read env2.v0
      let result_pap_fn1 = call stringify(cap_0, arg3)
      return result_pap_fn1",
    "name": "ShowNum",
    "normalized": "Struct [ show: λ(n: Num) -> (closure: FFI.stringify @Num n -| Γ: n) ]",
    "solverTrace": "=== Formula ===
  (forall ((n Real)) (= n n))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  n=n -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Σ($sig: [ show: Π(t3: Num) -> String ]) . Schema [ show: Π(t3: Num) -> String ]",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = unknown;
  const v1 = {
    eq: v0
  };
  return v1;
}
return main();
",
    "elaborated": "Struct [ eq: λ(x: Num) -> λ(y: Num) -> FFI.$eq x y ]",
    "error": "emit_erl: unknown function arity for "unknown"",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"EqNum"}
[3] struct
  :field -> [11] {"label":"eq"}
[5] lit {"value":{"type":"Atom","value":"Num"}}
[7] lit {"value":{"type":"Atom","value":"Num"}}
[10] var:foreign {"name":"$eq","arity":2}
[11] var:ref {"name":"$eq"}
  :refers_to -> [10]
  :scope -> [2] {"level":0}
  :scope -> [11] {"level":1}",
    "ivl": "(forall ((x Real)) (forall ((y Real)) (and (= x x) (= y y))))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &unknown
      let v1 = alloc { eq: v0 }
      return v1",
    "name": "EqNum",
    "normalized": "Struct [ eq: λ(x: Num) -> (closure: λ(y: Num) -> FFI.$eq x y -| Γ: x) ]",
    "solverTrace": "=== Formula ===
  (forall ((x Real)) (forall ((y Real)) (and (= x x) (= y y))))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  x=x -> residual
  x=y -> residual
  y=x -> residual
  y=y -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Σ($sig: [ eq: Π(t5: Num) -> Π(t6: Num) -> Bool ]) .
  Schema [ eq: Π(t5: Num) -> Π(t6: Num) -> Bool ]",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const env_cls2 = {};
  const fnref_cls2 = closure_27;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_28(env0, show1) {
  const cap_0 = env0.v0;
  const v0 = show1.show;
  return v0;
}

function closure_27(env0, t1) {
  const env_cls2 = {
    v0: t1
  };
  const fnref_cls2 = closure_28;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}
return main();
",
    "elaborated": "λ(t: Type) =>
  λ(show: Σ($sig: [ show: Π(t3: t) -> String ]) .
    Schema [ show: Π(t3: t) -> String ]) =>
    λ(x: t) -> ((show).show) x",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"display"}
[3] lambda {"variable":"t","icit":"Implicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [25]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] lambda {"variable":"show","icit":"Implicit","level":2}
  :annotation -> [6]
  :body -> [22]
  :env -> [26]
[6] sigma {"variable":"$sig","level":2}
  :annotation -> [7]
  :body -> [12]
[7] row:ext {"label":"show"}
  :rest -> [11]
  :value -> [8]
[8] pi {"variable":"t3","icit":"Explicit","level":2}
  :annotation -> [9]
  :body -> [10]
[9] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[10] lit {"value":{"type":"Atom","value":"String"}}
[11] row:empty
[12] app {"icit":"Explicit"}
  :arg -> [14]
  :func -> [13]
[13] lit {"value":{"type":"Atom","value":"Schema"}}
[14] row:ext {"label":"show"}
  :rest -> [18]
  :value -> [15]
[15] pi {"variable":"t3","icit":"Explicit","level":3}
  :annotation -> [16]
  :body -> [17]
[16] var:bound {"index":0}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [6] {"level":2}
[17] lit {"value":{"type":"Atom","value":"String"}}
[18] row:empty
[20] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[22] proj {"label":"show"}
  :target -> [23]
[23] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[25] env
[26] env
  :capture -> [3] {"index":0}
[27] closure
  :body -> [3]
  :env -> [25]
[28] closure
  :body -> [5]
  :env -> [26]",
    "ivl": "(forall ((t Type)) (forall ((x Type)) (= x x)))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_27
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_28(env0, show1) entry=entry
    entry:
      let cap_0 = read env0.v0
      let v0 = read show1.show
      return v0
  fn closure_27(env0, t1) entry=entry
    entry:
      let env_cls2 = alloc { v0: t1 }
      let fnref_cls2 = &closure_28
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2",
    "name": "display",
    "normalized": "λ(t: Type) =>
  (closure: λ(show: Σ($sig: [ show: Π(t3: t) -> String ]) .
    Schema [ show: Π(t3: t) -> String ]) =>
    λ(x: t) -> ((show).show) x -| Γ: t)",
    "solverTrace": "=== Formula ===
  (forall ((t Type)) (forall ((x Type)) (= x x)))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  t=x -> residual
  x=x -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(t: Type) =>
  Π(show: Σ($sig: [ show: Π(t3: t) -> String ]) .
    Schema [ show: Π(t3: t) -> String ]) =>
    Π(x: t) -> String",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const env_cls2 = {};
  const fnref_cls2 = closure_35;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_36(env0, eq1) {
  const cap_0 = env0.v0;
  const v0 = eq1.eq;
  return v0;
}

function closure_35(env0, t1) {
  const env_cls2 = {
    v0: t1
  };
  const fnref_cls2 = closure_36;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}
return main();
",
    "elaborated": "λ(t: Type) =>
  λ(eq: Σ($sig: [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) .
    Schema [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) =>
    λ(x: t) -> λ(y: t) -> ((eq).eq) x y",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"areEqual"}
[3] lambda {"variable":"t","icit":"Implicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [33]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] lambda {"variable":"eq","icit":"Implicit","level":2}
  :annotation -> [6]
  :body -> [29]
  :env -> [34]
[6] sigma {"variable":"$sig","level":2}
  :annotation -> [7]
  :body -> [14]
[7] row:ext {"label":"eq"}
  :rest -> [13]
  :value -> [8]
[8] pi {"variable":"t5","icit":"Explicit","level":2}
  :annotation -> [9]
  :body -> [10]
[9] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[10] pi {"variable":"t6","icit":"Explicit","level":3}
  :annotation -> [11]
  :body -> [12]
[11] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [8] {"level":2}
[12] lit {"value":{"type":"Atom","value":"Bool"}}
[13] row:empty
[14] app {"icit":"Explicit"}
  :arg -> [16]
  :func -> [15]
[15] lit {"value":{"type":"Atom","value":"Schema"}}
[16] row:ext {"label":"eq"}
  :rest -> [22]
  :value -> [17]
[17] pi {"variable":"t5","icit":"Explicit","level":3}
  :annotation -> [18]
  :body -> [19]
[18] var:bound {"index":0}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [6] {"level":2}
[19] pi {"variable":"t6","icit":"Explicit","level":4}
  :annotation -> [20]
  :body -> [21]
[20] var:bound {"index":1}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [6] {"level":2}
  :scope -> [17] {"level":3}
[21] lit {"value":{"type":"Atom","value":"Bool"}}
[22] row:empty
[24] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[26] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[29] proj {"label":"eq"}
  :target -> [30]
[30] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[33] env
[34] env
  :capture -> [3] {"index":0}
[35] closure
  :body -> [3]
  :env -> [33]
[36] closure
  :body -> [5]
  :env -> [34]",
    "ivl": "(forall ((t Type))
  (forall ((x Type)) (forall ((y Type)) (and (= x x) (= y y)))))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_35
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_36(env0, eq1) entry=entry
    entry:
      let cap_0 = read env0.v0
      let v0 = read eq1.eq
      return v0
  fn closure_35(env0, t1) entry=entry
    entry:
      let env_cls2 = alloc { v0: t1 }
      let fnref_cls2 = &closure_36
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2",
    "name": "areEqual",
    "normalized": "λ(t: Type) =>
  (closure: λ(eq: Σ($sig: [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) .
    Schema [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) =>
    λ(x: t) -> λ(y: t) -> ((eq).eq) x y -| Γ: t)",
    "solverTrace": "=== Formula ===
  (forall ((t Type))
    (forall ((x Type)) (forall ((y Type)) (and (= x x) (= y y)))))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  t=x -> residual
  t=y -> residual
  x=x -> residual
  x=y -> residual
  y=x -> residual
  y=y -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(t: Type) =>
  Π(eq: Σ($sig: [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) .
    Schema [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) =>
    Π(x: t) -> Π(y: t) -> Bool",
    "validity": "valid",
  },
  {
    "kind": "using",
    "name": "(using)",
  },
  {
    "kind": "using",
    "name": "(using)",
  },
  {
    "codegenJS": "function main() {
  const v0 = display;
  const v1 = "Num";
  const fnref2 = v0.__fn;
  const env3 = v0.__env;
  const v4 = fnref2(env3, v1);
  const v5 = ShowNum;
  const fnref6 = v4.__fn;
  const env7 = v4.__env;
  const v8 = fnref6(env7, v5);
  const v9 = 42;
  const fnref10 = v8.__fn;
  const env11 = v8.__env;
  const v12 = fnref10(env11, v9);
  return v12;
}
return main();
",
    "elaborated": "display @Num @ShowNum 42",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"shown"}
[3] app {"icit":"Explicit"}
  :arg -> [11]
  :func -> [4]
[4] app {"icit":"Implicit"}
  :arg -> [10]
  :func -> [5]
[5] app {"icit":"Implicit"}
  :arg -> [8]
  :func -> [7]
[6] var:free {"name":"display"}
[7] var:ref {"name":"display"}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
[8] lit {"value":{"type":"Atom","value":"Num"}}
[9] var:free {"name":"ShowNum"}
[10] var:ref {"name":"ShowNum"}
  :refers_to -> [9]
  :scope -> [2] {"level":0}
[11] lit {"value":{"type":"Num","value":42}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = display
      let v1 = Num
      let fnref2 = read v0.__fn
      let env3 = read v0.__env
      let v4 = call *fnref2(env3, v1)
      let v5 = ShowNum
      let fnref6 = read v4.__fn
      let env7 = read v4.__env
      let v8 = call *fnref6(env7, v5)
      let v9 = 42
      let fnref10 = read v8.__fn
      let env11 = read v8.__env
      let v12 = call *fnref10(env11, v9)
      return v12",
    "name": "shown",
    "normalized": "(stringify: (Num) (42))",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "String",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = areEqual;
  const v1 = "Num";
  const fnref2 = v0.__fn;
  const env3 = v0.__env;
  const v4 = fnref2(env3, v1);
  const v5 = EqNum;
  const fnref6 = v4.__fn;
  const env7 = v4.__env;
  const v8 = fnref6(env7, v5);
  const v9 = 10;
  const fnref10 = v8.__fn;
  const env11 = v8.__env;
  const v12 = fnref10(env11, v9);
  const v13 = 10;
  const fnref14 = v12.__fn;
  const env15 = v12.__env;
  const v16 = fnref14(env15, v13);
  return v16;
}
return main();
",
    "elaborated": "areEqual @Num @EqNum 10 10",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"same"}
[3] app {"icit":"Explicit"}
  :arg -> [13]
  :func -> [4]
[4] app {"icit":"Explicit"}
  :arg -> [12]
  :func -> [5]
[5] app {"icit":"Implicit"}
  :arg -> [11]
  :func -> [6]
[6] app {"icit":"Implicit"}
  :arg -> [9]
  :func -> [8]
[7] var:free {"name":"areEqual"}
[8] var:ref {"name":"areEqual"}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
[9] lit {"value":{"type":"Atom","value":"Num"}}
[10] var:free {"name":"EqNum"}
[11] var:ref {"name":"EqNum"}
  :refers_to -> [10]
  :scope -> [2] {"level":0}
[12] lit {"value":{"type":"Num","value":10}}
[13] lit {"value":{"type":"Num","value":10}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = areEqual
      let v1 = Num
      let fnref2 = read v0.__fn
      let env3 = read v0.__env
      let v4 = call *fnref2(env3, v1)
      let v5 = EqNum
      let fnref6 = read v4.__fn
      let env7 = read v4.__env
      let v8 = call *fnref6(env7, v5)
      let v9 = 10
      let fnref10 = read v8.__fn
      let env11 = read v8.__env
      let v12 = call *fnref10(env11, v9)
      let v13 = 10
      let fnref14 = read v12.__fn
      let env15 = read v12.__env
      let v16 = call *fnref14(env15, v13)
      return v16",
    "name": "same",
    "normalized": "true",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Bool",
    "validity": "valid",
  },
]
`;
